--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 /* Reset */
 body,
-h1 {
+h1,
+h2,
+ul,
+figure,
+p {
   margin: unset;
 }
 
@@ -9,13 +13,31 @@ img {
   vertical-align: top;
 }
 
-h1 {
+h1,
+h2 {
   font-size: unset;
+  font-weight: unset;
+}
+
+strong {
   font-weight: unset;
 }
 
 input {
   all: unset;
+}
+
+ul {
+  padding: unset;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  color: unset;
+  text-decoration: none;
 }
 
 /* Typography */
@@ -26,6 +48,7 @@ input {
 /* Variables */
 :root {
   --color-grey-10: #eeeeee;
+  --color-grey-40: #999;
   --color-black: #000;
   --color-white: #fff;
 
@@ -33,6 +56,7 @@ input {
   --color-red: #ea4336;
   --color-yellow: #fabd05;
   --color-green: #33a853;
+  --color-purple: #7c37b4;
 }
 
 /* Commons */
@@ -51,6 +75,9 @@ input:focus {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .header {
@@ -81,14 +108,14 @@ input:focus {
 
 .logo {
   font-size: 0;
+  margin-top: 120px;
+  margin-bottom: 20px;
 }
 
 .logo span {
   font-size: 80px;
   font-weight: 500;
   display: inline-block;
-  margin-top: 120px;
-  margin-bottom: 20px;
 }
 
 .logo span:nth-child(1) {
@@ -112,7 +139,7 @@ input:focus {
 
 .search {
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 .search input {
@@ -140,10 +167,80 @@ input:focus {
   transform: translateY(-50%);
 }
 
-.main-pannel {
-  box-shadow: inset 0 0 20px grey;
+#result {
+  width: 100%;
+  gap: 12px;
 }
 
-.footer {
-  box-shadow: inset 0 0 20px springgreen;
+#result a {
+  display: flex;
+  cursor: pointer;
+  padding: 12px;
+  border: 1px solid transparent;
+  border-radius: 8px;
+}
+
+#result a:hover {
+  border: 1px solid var(--color-blue);
+}
+
+.article {
+  flex-grow: 1;
+  flex-basis: 0;
+  min-width: 0;
+}
+
+.article-title {
+  font-size: 24px;
+  font-weight: 500;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.article-title strong {
+  color: var(--color-purple);
+  font-weight: 600;
+}
+
+.article-meta {
+  display: flex;
+  margin-bottom: 12px;
+}
+
+.article-meta .author::after {
+  content: "";
+  margin: 0px 6px;
+  display: inline-block;
+  width: 2px;
+  height: 1rem;
+  background-color: var(--color-grey-40);
+}
+
+.article-meta .createdAt {
+  color: var(--color-blue);
+}
+
+.article-content {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+.cover {
+  width: 200px;
+  display: flex;
+  align-items: center;
+}
+
+.cover img {
+  width: 100%;
+
+  height: 120px;
+  object-fit: cover;
 }
